--- a/css/about.css
+++ b/css/about.css
@@ -7,8 +7,7 @@ html, body{
 .container {
     margin-right: auto;
     margin-left: auto;
-    position: relative;
-    overflow: auto; 
+    position: relative; 
     width: 100%;
     height: auto;
  }
@@ -60,11 +59,50 @@ html, body{
     color: #D3643B;
 }
 
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;   
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 10px 10px;
+    text-decoration: none;
+    display: block;
+}
+
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    color: #D3643B;
+}
+
 /** HERO **/
 .hero {
     background-image: url("/images/About-Photo4.png");
     background-size: cover;
     height: auto;
+    overflow: auto;
 }
 
 .hero .left {
@@ -139,6 +177,7 @@ span {
 .footer {
     background-color: #363F3C;
     height: 80px;
+    overflow: auto;
 }
 
 .footer p {
