--- a/css/landing.css
+++ b/css/landing.css
@@ -8,8 +8,8 @@ html, body {
     margin-right: auto;
     margin-left: auto;
     position: relative;
-    overflow: auto; 
     width: 100%;
+    height: auto;
  }
 
 .row {
@@ -57,16 +57,60 @@ html, body {
     color: #D3643B;
 }
 
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;   
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 10px 10px;
+    text-decoration: none;
+    display: block;
+}
+
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    color: #D3643B;
+}
+
+
 /**HERO**/
+.hero {
+    overflow: auto;
+}
+
 .hero .row {
      width: 75%;
      margin: 0 auto;
 }
 .hero .right img {
     width: 100%;
+    height: auto;
     display: block;
     margin: 0 auto;
-    padding-top: 35px;
+    padding-top: 55px;
 }
 
 .hero .left img {
@@ -96,9 +140,15 @@ html, body {
 
 /**CASE STUDIES**/
 .more {
+    padding-top: 30px;
     text-align: center;
     font-size: 36px;
     font-weight: 100;
+    overflow: auto;
+}
+
+.case-studies {
+    overflow: auto;
 }
 
 .case-studies img {
@@ -173,6 +223,7 @@ html, body {
 .footer {
     background-color: #363F3C;
     height: 80px;
+    overflow: auto;
 }
 
 .footer p {
