--- a/css/contact.css
+++ b/css/contact.css
@@ -19,11 +19,6 @@ html, body{
     margin: 0 auto;
 }
 
-img {
-    display: block;
-    margin: 0 auto;
-}
-
 /**NAV**/
 .nav {
     background-color: #A9C7BD;
@@ -44,15 +39,12 @@ img {
     text-align: right;
     vertical-align: middle;
     padding-top: 10px;
-    /**display: inline-block;
-    float: right;**/
 }
 
 .nav ul li {
     display: inline-block;
     margin-left: 20px;
     vertical-align: middle;
-    text-align: right;
 }
 
 .nav a, .nav p {
@@ -63,7 +55,7 @@ img {
     padding-top: 10px;
 }
 
-.nav .work {
+.nav .contact {
     color: #D3643B;
 }
 
@@ -85,7 +77,7 @@ img {
 
 /* Links inside the dropdown */
 .dropdown-content a {
-    color: #363F3C;
+    color: black;
     padding: 10px 10px;
     text-decoration: none;
     display: block;
@@ -102,121 +94,49 @@ img {
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-    /**color: #D3643B;**/
+    color: #D3643B;
 }
-
-
 
 /** HERO **/
 .hero {
+    background-image: url("/images/About-Photo4.png");
+    background-size: cover;
     height: auto;
     overflow: auto;
 }
 
-.hero img {
-    padding-top: 60px;
-    width: 25%;
-    display: block;
-    margin: 0 auto;
+.hero .left {
+    width: 70%;
+    height: auto;
 }
 
-.hero h3 {
+.hero h1 {
+    padding-top: 70px;
+    font-size: 60px;
+    color: #F2F1F0;
+    font-weight: 500;
+    line-height: 60px;
+}
+
+.hero h2 {
     font-size: 32px;
-    color: gray;
+    color: white;
     font-weight: 100;
     line-height: 50px;
-    text-align: center;
+    padding-bottom: 70px;
+}
+
+/** BIO **/
+.bio p {
+    padding-top: 50px;
+    font-size: 25px;
+    line-height: 35px;
     padding-bottom: 50px;
 }
 
-/** CASE-STUDY **/
-
-.case-study {
-    background-color: #F2F1F0;
-    overflow: auto;
-}
-
-.case-study .row {
-    width: 70%;
-    display: block;
-    margin: 0 auto;
-}
-
-.before-after {
-    width: 100%;
-    overflow: auto;
-}
-
-.before, .after {
-    float: left;
-    width: 50%;
-    height: auto;
-}
-
-.before-after img {
-    width: 35%;
-    height: auto;
-    display: block;
-    margin: 0 auto;
-}
-
-
-.case-study p {
-    font-size: 18px;
-    line-height: 25px;
-}
-
-.case-study h3 {
-    font-size: 36px;
-}
-
-.case-study h4 {
-    font-size: 28px;
-}
-
-.case-study h6 {
-    font-size: 16px;
-}
-
-.case-study a {
-    text-decoration: none;
+span {
     color: #D3643B;
-    font-weight: 500;
 }
-
-.case-study img {
-    width: 100%;
-    height: auto;
-}
-
-.case-study li {
-    font-size: 18px;
-    line-height: 25px;
-}
-
-blockquote {
-  background: #f9f9f9;
-  border-left: 10px solid #ccc;
-  margin: 1.5em 10px;
-  padding: 0.5em 10px;
-}
-
-blockquote:before {
-  color: #ccc;
-  content: open-quote;
-  font-size: 4em;
-  line-height: 0.1em;
-  margin-right: 0.25em;
-  vertical-align: -0.4em;
-}
-
-blockquote p {
-  display: inline;
-}
-
-/**span {
-    color: #D3643B;
-}**/
 
 /** LINKS **/
 .button {
@@ -250,8 +170,9 @@ blockquote p {
     text-align: center;
     padding-top: 50px;
     padding-bottom: 50px;
-}
-    
+} 
+
+
     
 
 /** FOOTER **/
@@ -269,13 +190,66 @@ blockquote p {
     font-size: 16px;
 }
 
-/**JSWEETS**/
-.hero .jSweetsLogo {
-    width: 25%;
+/**CONTACT**/
+input, textarea {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    color: #363F3C;
 }
 
-/**WISE MOVES PILATES**/
-.hero .wiseMovesLogo {
-    width: 30%;
+input[type=text], textarea {
+    border: 2px solid gray;
+    border-radius: 4px;
+    margin-top: 5px;
+    color: #363F3C;
 }
 
+input[type=text] {
+    height: 30px;
+    line-height: 0px;
+}
+
+.contact-row {
+    width: 50%;
+    display: block;
+    margin: 0 auto;
+}
+
+.form-background {
+    width: 80%;
+    background-color: lightgray;
+    display: block;
+    margin: 0 auto;
+}
+
+form {
+    margin-top: 60px;
+    padding-top: 50px;
+    padding-bottom: 70px;
+}
+
+.contact-button {
+    display: block;
+    margin: 0 auto;
+    border-radius: 6px;
+    background-color: #D3643B;
+    border: none;
+    font-size: 20px;
+    padding: 12px 28px;
+    width: 101%;
+    text-align: center;
+    margin-top: 10px;
+}
+
+input[type=submit] {
+    color: #F2F1F0;
+}
+
+.contact-intro {
+    padding-top: 50px;
+    font-size: 25px;
+    line-height: 35px;
+    padding-bottom: 10px;
+    text-align: center;
+}
