edited image paths

--- a/css/landing.css
+++ b/css/landing.css
@@ -183,7 +183,7 @@ html, body {
 }
 
 .case-studies .left {
-    background: url("/images/pink_birds.png");
+    background: url("images/pink_birds.png");
     background-size: 100%;
     filter: blur(5px);
     -moz-filter   : blur(5px);
@@ -200,7 +200,7 @@ html, body {
 }
 
 .case-studies .right {
-    background-image: url("/images/pilates-elderly.jpg");
+    background-image: url("images/pilates-elderly.jpg");
     background-size: 100%;
     filter: blur(5px);
     -moz-filter   : blur(5px);
