--- a/css/landing.css
+++ b/css/landing.css
@@ -132,6 +132,11 @@ html, body {
     width: 200px;
 }
 
+.hero a {
+    text-decoration: none;
+    color: #F2F1F0;
+}
+
 .hero p {
     text-align: center;
     font-size: 20px;
