--- a/css/dropit.css
+++ b/css/dropit.css
@@ -12,16 +12,16 @@
     list-style: none;
 	padding: 0;
 	/**margin: 0;**/
-    margin: 15px 0 0;
-    float:right;
+    margin: 0;
+    float: left;
     display:inline-block;
 }
 .dropit .dropit-trigger { position: relative; }
 .dropit .dropit-submenu {
     position: absolute;
     top: 100%;
-    left: 10px; 
-    /*right: 0;/* dropdown left or right */
+    left: -90px; 
+    /*right: 0px; /* dropdown left or right */
     z-index: 1000;
     display: none;
     /*min-width: 150px;*/
@@ -49,7 +49,7 @@
     width: 0;
     z-index: 1;
     top: -8px;
-    left: 15px;
+    left: 95px;
  }
 .dropit .dropit-open .dropit-submenu li {
     display: block;
@@ -59,9 +59,9 @@
     margin-bottom: 0px;
  }
  .dropit .dropit-open .dropit-submenu li a {
-    color:#416c78;
+    color:#363F3C;
     text-decoration: none;
-    font-family: "Avenir Next";
+    font-family: "Questrial";
     font-weight:400;
     font-size: 18px;
  }
