--- a/css/landing.css
+++ b/css/landing.css
@@ -70,17 +70,17 @@ html, body {
     background-color: #f9f9f9;
     width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    border-radius: 4px;
     z-index: 1;
 }
 
 /* Links inside the dropdown */
 .dropdown-content a {
-    color: black;
+    color: #363F3C;
     padding: 10px 10px;
     text-decoration: none;
     display: block;
 }
-
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {background-color: #f1f1f1}
@@ -257,8 +257,21 @@ html, body {
     font-size: 16px;
 }
 
+/**HAMBURGER**/
+.hamburger {
+   position:absolute;
+   z-index: 1000;
+   background: none;
+   color:#363F3C;
+   text-decoration: none;
+   font-size: 35px;
+   left: 85%;
+   top: 2px;
+   padding-top: 5px;
+ }
+
 /** MEDIA QUERIES**/
-@media (min-width: 400px) and (max-width:600px) {
+@media (min-width: 100px) and (max-width:702px) {
     .left, .right, .middle {
         width: 100%;
         height: auto;
@@ -310,6 +323,13 @@ html, body {
     margin-top: 0%;
     opacity: .9;
     }
+    
+    .nav ul { display: none; }  
+}
+
+@media (min-width: 702px) {
+     .hamburger { display:none; }
+ }
 
 
 
