--- a/css/contact.css
+++ b/css/contact.css
@@ -273,6 +273,15 @@ input[type=submit] {
     text-align: center;
 }
 
+.sent {
+    color: #D3643B;
+    text-align: center;
+    padding-top: 10%;
+    font-size: 24px;
+    font-weight: 100;
+    line-height: 30px;
+}
+
 /**HAMBURGER**/
 .hamburger {
    position:absolute;
