--- a/css/contact.css
+++ b/css/contact.css
@@ -171,10 +171,7 @@ span {
     text-align: center;
     padding-top: 50px;
     padding-bottom: 50px;
-} 
-
-
-    
+}    
 
 /** FOOTER **/
 .footer {
@@ -261,7 +258,7 @@ form {
     margin-top: 10px;
 }
 
-input[type=submit] {
+input[type=button] {
     color: #F2F1F0;
 }
 
@@ -270,6 +267,18 @@ input[type=submit] {
     font-size: 25px;
     line-height: 35px;
     padding-bottom: 10px;
+    text-align: center;
+}
+
+a {
+    text-decoration: none;
+}
+
+.thankyou {
+    color: #D3643B;
+    font-weight: 100;
+    line-height: 30px;
+    font-size: 24px;
     text-align: center;
 }
 
