modified fa sizes

--- a/css/contact.css
+++ b/css/contact.css
@@ -314,6 +314,17 @@ a {
     .nav ul { display: none; }  
 }
 
+@media (min-width: 100px) and (max-width:600px) {
+    
+    .fa {
+        margin-right: 25px;
+    }
+
+    .links ul li {
+        font-size: 42px;
+    }
+}
+
 @media (min-width: 702px) {
      .hamburger { display:none; }
  }
