--- a/css/case-studies.css
+++ b/css/case-studies.css
@@ -394,7 +394,15 @@ blockquote p {
  }
 
 @media (min-width: 100px) and (max-width:600px) {
-    .hero img { min-width: 80%; }   
+    .hero img { min-width: 80%; }
+    
+    .fa {
+        margin-right: 25px;
+    }
+
+    .links ul li {
+        font-size: 42px;
+    }
 }
 
 @media (min-width: 601px) and (max-width:800px) {
