--- a/css/case-studies.css
+++ b/css/case-studies.css
@@ -211,6 +211,15 @@ blockquote:before {
   vertical-align: -0.4em;
 }
 
+blockquote:after {
+  content: close-quote;
+  color: #ccc;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+
 blockquote p {
   display: inline;
 }
